@@ -1,3 +1,5 @@
+  - Use core Message::Passing::Role::HasHostnameAndPort
+
 0.002
   - Fix SYNOPSIS in documentation.
   - Add timeouts to tests to avoid hangs when they fail.
